tests/NormalTests/paczka1/small_fuzzy/52024439.err
Error in line 1: DGpce S629 37,7
Error in line 2: sbB A256 77,4
Error in line 7: wRqmOMl A124 64,9
Error in line 4: sbB S629 19,6
Error in line 13: sbB A124 30,3
Error in line 14: A256 S629 58,0
